# pjf-engenharia-de-dados

./: .gitignore  404.html  README.md  index.html  index.txt  mkdocs.yml  olistpbi.pbix  pyproject.toml  style.css
about/: index.html
algo/: dimensional.ipynb
algo/bronze/: bronze.ipynb  dim_data.csv  localizacoes.csv  produtos.csv
algo/gold/: dim_data.csv  dim_localizacoes.csv  gold.ipynb
algo/landing/: Landing.ipynb  clientes.csv  dadosprodutos.csv  geo.csv  pagamentos.csv  vendedores.csv
algo/silver/: dim_data.csv  dim_entregas.csv  dim_localizacoes.csv  silver.ipynb
docs/: about.md  index.md  style.css
infra/airflow/: requirements.txt
infra/airflow/dags/: databricks_bronze_dag.py  databricks_gold_dag.py  databricks_landing_dag.py  databricks_relational_to_landing_dag.py  databricks_silver_dag.py
infra/terraform/: main.tf  outputs.tf
infra/terraform/modules/database/: main.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf
medalhao_etl/: estrela.drawio  mao_na_roda.txt
medalhao_etl/bronze/: bronze.ipynb
medalhao_etl/gold/: gold2.ipynb
medalhao_etl/landing/: landing.ipynb
medalhao_etl/silver/: silver.ipynb
pjf_engenharia_de_dados/: gold_to_dimensional.ipynb  relational_to_landing.ipynb
search/: search_index.json
