[tool.poetry]
name = "pjf-engenharia-de-dados"
version = "0.1.0"
description = ""
authors = ["NicolasLK <nicolas.kaminski.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.6.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
